Moving things around (#70)
* Moving more things around

* Moved more classes around

* more moving things around

* Moving cashshop things to cs package

* Moving cashshop things to cs package

* Remove useless comments

* Fix lombok imports